Tema 5/4/DockerComposeParser.py
# Generated from DockerCompose.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DockerComposeParser ( Parser ):

    grammarFileName = "DockerCompose.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'version'", "'services'", "'networks'", 
                     "'driver'", "'ipam'", "'config'", "'subnet'", "'gateway'", 
                     "'ip_range'", "'external'", "'internal'", "':'", "'-'" ]

    symbolicNames = [ "<INVALID>", "VERSION", "SERVICES", "NETWORKS", "DRIVER", 
                      "IPAM", "CONFIG", "SUBNET", "GATEWAY", "IP_RANGE", 
                      "EXTERNAL", "INTERNAL", "COLON", "HYPHEN", "BOOLEAN", 
                      "IDENTIFIER", "VALUE", "STRING", "WS", "COMMENT" ]

    RULE_compose_file = 0
    RULE_version = 1
    RULE_services = 2
    RULE_service = 3
    RULE_service_body = 4
    RULE_networks_ref = 5
    RULE_network_ref_list = 6
    RULE_networks = 7
    RULE_network = 8
    RULE_network_body = 9
    RULE_driver_spec = 10
    RULE_ipam_spec = 11
    RULE_ipam_body = 12
    RULE_driver_ipam_spec = 13
    RULE_config_spec = 14
    RULE_config_item = 15
    RULE_ipam_config_item = 16
    RULE_subnet_spec = 17
    RULE_gateway_spec = 18
    RULE_ip_range_spec = 19
    RULE_external_spec = 20
    RULE_internal_spec = 21
    RULE_value_item = 22

    ruleNames =  [ "compose_file", "version", "services", "service", "service_body", 
                   "networks_ref", "network_ref_list", "networks", "network", 
                   "network_body", "driver_spec", "ipam_spec", "ipam_body", 
                   "driver_ipam_spec", "config_spec", "config_item", "ipam_config_item", 
                   "subnet_spec", "gateway_spec", "ip_range_spec", "external_spec", 
                   "internal_spec", "value_item" ]

    EOF = Token.EOF
    VERSION=1
    SERVICES=2
    NETWORKS=3
    DRIVER=4
    IPAM=5
    CONFIG=6
    SUBNET=7
    GATEWAY=8
    IP_RANGE=9
    EXTERNAL=10
    INTERNAL=11
    COLON=12
    HYPHEN=13
    BOOLEAN=14
    IDENTIFIER=15
    VALUE=16
    STRING=17
    WS=18
    COMMENT=19

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Compose_fileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DockerComposeParser.EOF, 0)

        def version(self):
            return self.getTypedRuleContext(DockerComposeParser.VersionContext,0)


        def services(self):
            return self.getTypedRuleContext(DockerComposeParser.ServicesContext,0)


        def networks(self):
            return self.getTypedRuleContext(DockerComposeParser.NetworksContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_compose_file

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompose_file" ):
                listener.enterCompose_file(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompose_file" ):
                listener.exitCompose_file(self)




    def compose_file(self):

        localctx = DockerComposeParser.Compose_fileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compose_file)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 46
                self.version()


            self.state = 50
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 49
                self.services()


            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 52
                self.networks()


            self.state = 55
            self.match(DockerComposeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VERSION(self):
            return self.getToken(DockerComposeParser.VERSION, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def value_item(self):
            return self.getTypedRuleContext(DockerComposeParser.Value_itemContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = DockerComposeParser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self.match(DockerComposeParser.VERSION)
            self.state = 58
            self.match(DockerComposeParser.COLON)
            self.state = 59
            self.value_item()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServicesContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SERVICES(self):
            return self.getToken(DockerComposeParser.SERVICES, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def service(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.ServiceContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.ServiceContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_services

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterServices" ):
                listener.enterServices(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitServices" ):
                listener.exitServices(self)




    def services(self):

        localctx = DockerComposeParser.ServicesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_services)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(DockerComposeParser.SERVICES)
            self.state = 62
            self.match(DockerComposeParser.COLON)
            self.state = 64 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 63
                self.service()
                self.state = 66 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ServiceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DockerComposeParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def service_body(self):
            return self.getTypedRuleContext(DockerComposeParser.Service_bodyContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_service

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService" ):
                listener.enterService(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService" ):
                listener.exitService(self)




    def service(self):

        localctx = DockerComposeParser.ServiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_service)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(DockerComposeParser.IDENTIFIER)
            self.state = 69
            self.match(DockerComposeParser.COLON)
            self.state = 70
            self.service_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Service_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def networks_ref(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Networks_refContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Networks_refContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_service_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService_body" ):
                listener.enterService_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService_body" ):
                listener.exitService_body(self)




    def service_body(self):

        localctx = DockerComposeParser.Service_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_service_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 72
                    self.networks_ref() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Networks_refContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NETWORKS(self):
            return self.getToken(DockerComposeParser.NETWORKS, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def network_ref_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Network_ref_listContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Network_ref_listContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_networks_ref

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworks_ref" ):
                listener.enterNetworks_ref(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworks_ref" ):
                listener.exitNetworks_ref(self)




    def networks_ref(self):

        localctx = DockerComposeParser.Networks_refContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_networks_ref)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(DockerComposeParser.NETWORKS)
            self.state = 79
            self.match(DockerComposeParser.COLON)
            self.state = 81 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 80
                self.network_ref_list()
                self.state = 83 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Network_ref_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HYPHEN(self):
            return self.getToken(DockerComposeParser.HYPHEN, 0)

        def IDENTIFIER(self):
            return self.getToken(DockerComposeParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return DockerComposeParser.RULE_network_ref_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork_ref_list" ):
                listener.enterNetwork_ref_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork_ref_list" ):
                listener.exitNetwork_ref_list(self)




    def network_ref_list(self):

        localctx = DockerComposeParser.Network_ref_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_network_ref_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(DockerComposeParser.HYPHEN)
            self.state = 86
            self.match(DockerComposeParser.IDENTIFIER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworksContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NETWORKS(self):
            return self.getToken(DockerComposeParser.NETWORKS, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def network(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.NetworkContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.NetworkContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_networks

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetworks" ):
                listener.enterNetworks(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetworks" ):
                listener.exitNetworks(self)




    def networks(self):

        localctx = DockerComposeParser.NetworksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_networks)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(DockerComposeParser.NETWORKS)
            self.state = 89
            self.match(DockerComposeParser.COLON)
            self.state = 91 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 90
                self.network()
                self.state = 93 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==15):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NetworkContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(DockerComposeParser.IDENTIFIER, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def network_body(self):
            return self.getTypedRuleContext(DockerComposeParser.Network_bodyContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_network

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork" ):
                listener.enterNetwork(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork" ):
                listener.exitNetwork(self)




    def network(self):

        localctx = DockerComposeParser.NetworkContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_network)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(DockerComposeParser.IDENTIFIER)
            self.state = 96
            self.match(DockerComposeParser.COLON)
            self.state = 97
            self.network_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Network_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def driver_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Driver_specContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Driver_specContext,i)


        def ipam_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Ipam_specContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Ipam_specContext,i)


        def external_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.External_specContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.External_specContext,i)


        def internal_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Internal_specContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Internal_specContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_network_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNetwork_body" ):
                listener.enterNetwork_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNetwork_body" ):
                listener.exitNetwork_body(self)




    def network_body(self):

        localctx = DockerComposeParser.Network_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_network_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3120) != 0):
                self.state = 103
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [4]:
                    self.state = 99
                    self.driver_spec()
                    pass
                elif token in [5]:
                    self.state = 100
                    self.ipam_spec()
                    pass
                elif token in [10]:
                    self.state = 101
                    self.external_spec()
                    pass
                elif token in [11]:
                    self.state = 102
                    self.internal_spec()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Driver_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRIVER(self):
            return self.getToken(DockerComposeParser.DRIVER, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def value_item(self):
            return self.getTypedRuleContext(DockerComposeParser.Value_itemContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_driver_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDriver_spec" ):
                listener.enterDriver_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDriver_spec" ):
                listener.exitDriver_spec(self)




    def driver_spec(self):

        localctx = DockerComposeParser.Driver_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_driver_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(DockerComposeParser.DRIVER)
            self.state = 109
            self.match(DockerComposeParser.COLON)
            self.state = 110
            self.value_item()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipam_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IPAM(self):
            return self.getToken(DockerComposeParser.IPAM, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def ipam_body(self):
            return self.getTypedRuleContext(DockerComposeParser.Ipam_bodyContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_ipam_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpam_spec" ):
                listener.enterIpam_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpam_spec" ):
                listener.exitIpam_spec(self)




    def ipam_spec(self):

        localctx = DockerComposeParser.Ipam_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ipam_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(DockerComposeParser.IPAM)
            self.state = 113
            self.match(DockerComposeParser.COLON)
            self.state = 114
            self.ipam_body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipam_bodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def driver_ipam_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Driver_ipam_specContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Driver_ipam_specContext,i)


        def config_spec(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Config_specContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Config_specContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_ipam_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpam_body" ):
                listener.enterIpam_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpam_body" ):
                listener.exitIpam_body(self)




    def ipam_body(self):

        localctx = DockerComposeParser.Ipam_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_ipam_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 118
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [4]:
                        self.state = 116
                        self.driver_ipam_spec()
                        pass
                    elif token in [6]:
                        self.state = 117
                        self.config_spec()
                        pass
                    else:
                        raise NoViableAltException(self)
             
                self.state = 122
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Driver_ipam_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DRIVER(self):
            return self.getToken(DockerComposeParser.DRIVER, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def value_item(self):
            return self.getTypedRuleContext(DockerComposeParser.Value_itemContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_driver_ipam_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDriver_ipam_spec" ):
                listener.enterDriver_ipam_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDriver_ipam_spec" ):
                listener.exitDriver_ipam_spec(self)




    def driver_ipam_spec(self):

        localctx = DockerComposeParser.Driver_ipam_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_driver_ipam_spec)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.match(DockerComposeParser.DRIVER)
            self.state = 124
            self.match(DockerComposeParser.COLON)
            self.state = 125
            self.value_item()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONFIG(self):
            return self.getToken(DockerComposeParser.CONFIG, 0)

        def COLON(self):
            return self.getToken(DockerComposeParser.COLON, 0)

        def config_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Config_itemContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Config_itemContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_config_spec

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_spec" ):
                listener.enterConfig_spec(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_spec" ):
                listener.exitConfig_spec(self)




    def config_spec(self):

        localctx = DockerComposeParser.Config_specContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_config_spec)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self.match(DockerComposeParser.CONFIG)
            self.state = 128
            self.match(DockerComposeParser.COLON)
            self.state = 130 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 129
                self.config_item()
                self.state = 132 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==13):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Config_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def HYPHEN(self):
            return self.getToken(DockerComposeParser.HYPHEN, 0)

        def ipam_config_item(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DockerComposeParser.Ipam_config_itemContext)
            else:
                return self.getTypedRuleContext(DockerComposeParser.Ipam_config_itemContext,i)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_config_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConfig_item" ):
                listener.enterConfig_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConfig_item" ):
                listener.exitConfig_item(self)




    def config_item(self):

        localctx = DockerComposeParser.Config_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_config_item)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(DockerComposeParser.HYPHEN)
            self.state = 136 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 135
                self.ipam_config_item()
                self.state = 138 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 896) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Ipam_config_itemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def subnet_spec(self):
            return self.getTypedRuleContext(DockerComposeParser.Subnet_specContext,0)


        def gateway_spec(self):
            return self.getTypedRuleContext(DockerComposeParser.Gateway_specContext,0)


        def ip_range_spec(self):
            return self.getTypedRuleContext(DockerComposeParser.Ip_range_specContext,0)


        def getRuleIndex(self):
            return DockerComposeParser.RULE_ipam_config_item

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIpam_config_item" ):
                listener.enterIpam_config_item(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIpam_config_item" ):
                listener.exitIpam_config_item(self)




    def ipam_config_item(self):

        localctx = DockerComposeParser.Ipam_config_itemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_ipam_config_item)
        try:
            self.state = 143
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.subnet_spec()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 141
                self.gateway_spec()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 142
                self.ip_range_spec()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Subnet_specContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
